[package]
name = "metrics-experiment"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0"
google-cloud-auth = "1.8.0"
opentelemetry = { version = "0.31", features = ["metrics"] }
opentelemetry_sdk = { version = "0.31", features = ["rt-tokio", "metrics", "spec_unstable_metrics_views"] }
opentelemetry-otlp = { version = "0.31", features = ["metrics", "grpc-tonic", "tls"] }
tokio = { version = "1.43", features = ["full"] }
tonic = { version = "0.14", features = ["tls-native-roots"] }
http = "1.1"
tracing = "0.1"
tracing-subscriber = "0.3"
uuid = { version = "1.11", features = ["v4"] }
